--- a/main.css
+++ b/main.css
@@ -1,5 +1,9 @@
 html 
 {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    height: 100vh;
     background: url(../order-summary-component-main/images/pattern-background-desktop.svg) no-repeat;
     background-size: 100%;
     background-color:hsl(225, 100%, 94%);
@@ -105,11 +109,6 @@ img
     background: none;
 }
 
-.header 
-{
-    height: 7em;
-} 
-
 .info 
 {
     font-family: 'Red Hat Display';
@@ -124,7 +123,11 @@ img
 
 .attribution 
 { 
+    position: absolute;
     margin-top: 30px;
+    bottom: 0;
+    left: 0;
+    right: 0;
     font-size: 11px; text-align: center; 
 }
 
