--- a/main.css
+++ b/main.css
@@ -130,6 +130,7 @@ img
     width: 85%;
     margin-left: auto;
     margin-right: auto;
+
 }
 
 .sub-info
@@ -180,5 +181,61 @@ img
 
 @media (max-width: 375px)
 {
+    main
+    {
+        padding: .5em 1.5em;
+    }
 
+    h1 
+    {
+        font-size: 1.4em;
+    }
+
+    h2 
+    {
+        margin: 0;
+    }
+
+    #wrapper
+    {
+        width: 90%;
+    }
+
+    #sub
+    {
+        height: 5em;
+    }
+
+    #icon
+    {
+        margin-left: 1em;
+    }
+
+    #change
+    {
+        font-size: .8em;
+        margin-left: 4em;
+    }
+    
+    .main-img
+    {
+        width: 100%;
+        height: 100%;
+    } 
+
+    .info
+    {
+        width: 17em;
+    }
+
+    .sub-info
+    {
+        font-size: .9em;
+        margin-left: 5.5em;
+    }
+
+    .attribution
+    {
+        margin: 13px;
+    }
 }
